UPDATE FREE VIDEO

--- a/partials/header.html
+++ b/partials/header.html
@@ -2,7 +2,9 @@
 <template id="header-en">
   <header class="site-header">
     <div class="wrap">
-      <a class="brand" href="index.html">anoki.media</a>
+      <a class="brand" href="index.html" aria-label="Anoki media home">
+        <img src="assets/logo_anoki-media.svg" alt="anoki media logo">
+      </a>
       <nav class="nav">
         <a href="index.html">Projects</a>
         <a href="about.html">About</a>
@@ -14,7 +16,9 @@
 <template id="header-fr">
   <header class="site-header">
     <div class="wrap">
-      <a class="brand" href="index.html">anoki.media</a>
+      <a class="brand" href="index.html" aria-label="Anoki media accueil">
+        <img src="assets/logo_anoki-media.svg" alt="logo anoki media">
+      </a>
       <nav class="nav">
         <a href="index.html">Projets</a>
         <a href="about.html">À propos</a>
